Created blog and about pages

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,8 +10,10 @@
     <title>Astro</title>
   </head>
   <body>
-    <a href="/about/">About</a>
+    <a href="/">Home</a>
     <a href="/blog/">Blog</a>
-    <h1>Astro Site</h1>
+    <h1>About Me Page</h1>
+    <h2>Following a tutorial... for now</h2>
+    <p>Lowkey need to learn HTML first but oh well</p>
   </body>
 </html>
