--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,8 +10,9 @@
     <title>Astro</title>
   </head>
   <body>
+    <a href="/">Home</a>
     <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
-    <h1>Astro Site</h1>
+    <h1>Blog page</h1>
+    <h2>But I dont got much to say</h2>
   </body>
 </html>
